--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve:ssr:ang14": "node dist/ang14/server/server.mjs"
+    "serve:ssr:ang14": "node dist/ang14/server/server.mjs",
+    "deploy": "firebase deploy"
   },
   "private": true,
   "dependencies": {
@@ -33,6 +34,7 @@
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^18.18.0",
+    "firebase": "^10.12.2",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
