--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "serve:ssr:ang14": "node dist/ang14/server/server.mjs",
-    "deploy": "firebase deploy"
+    "deploy": "firebase deploy --only hosting:startum-d550d"
   },
   "private": true,
   "dependencies": {
